 TODO
  - Save state in cookie based on name of designerfield
  - Support loading and saving of file
  - Add Code tree to access hidden fields
  - Redraw of screen elements should not allways be full (as now in work arround)
  - Redraw of complex containers (accordion) not working
  - Add a visual resize option to item
  - Add Grid Wirzard
  - Add loading page when initailizing index.html en index.php


 Change History:
 Version 2.0.1-beta2: 
  * Added delete element as context menu
  * Added Undo and Redo functions
  * Added CodeTree
  * Fixed problems in editableJson code
  
 
 Version 2.0.0-beta1: 
  * Complety rebuild as toolbox